--- a/.gitignore
+++ b/.gitignore
@@ -140,4 +140,12 @@ h2o-docs/src/booklets/source/PythonBooklet.tui
 
 *.gz(busy)
 
-h2o-web/package-lock.json
+*/include/
+*/latest
+*/nodes-private
+*/nodes-public
+*/pip-selfcheck.json
+*/project_version
+*/share/
+*/stable
+
